# 2A202600503-VoThanhDanh-Track03-Day17

./: .env.example  .gitignore  BENCHMARK.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  settings.yaml
benchmark/: metrics.py  oracle.py  reporter.py  runner.py
benchmark/scenarios/: 01_preference_same_session.yaml  02_preference_cross_session.yaml  03_preference_contradiction.yaml  04_factual_profile.yaml  05_factual_technical.yaml  06_episodic_adaptation.yaml  07_ambiguous_multi_memory.yaml  08_precision_irrelevant.yaml  09_long_conversation_trim.yaml  10_cold_start.yaml
outputs/reports/run_20260424_121031_fb4011/: memory_hit_rate.md  metrics_table.csv  report.md  summary.json  token_budget.md
outputs/runs/run_20260424_121031_fb4011/: s01_pref_same_session_mem.jsonl  s01_pref_same_session_nomem.jsonl  s02_pref_cross_session_mem.jsonl  s02_pref_cross_session_nomem.jsonl  s03_pref_contradiction_mem.jsonl  s03_pref_contradiction_nomem.jsonl  s04_fact_profile_mem.jsonl  s04_fact_profile_nomem.jsonl  s05_fact_technical_mem.jsonl  s05_fact_technical_nomem.jsonl  s06_episodic_adaptation_mem.jsonl  (+9 more)
scripts/: run_benchmark.py  run_ui.py  seed_redis.py
src/agent/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/integration/: test_benchmark_pipeline.py  test_cross_session_recall.py  test_graph_with_mock.py
tests/unit/: test_benchmark_isolation.py  test_benchmark_rubric.py  test_conflict.py  test_context_manager.py  test_llm_extraction.py  test_metrics.py  test_router.py  test_schemas.py  test_ui_service.py  test_writers.py
(+52 files in other folders)
