[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day17-multi-memory-agent"
version = "0.1.0"
description = "Lab 17 — Multi-Memory Agent with LangGraph"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "tiktoken>=0.7",
  "redis>=5.0",
  "fakeredis>=2.23",
  "chromadb>=0.5.0",
  "openai>=1.30.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
agent = "agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "llm: tests requiring real LLM API (skipped by default in CI)",
]
addopts = "-q -m 'not llm'"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
